--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 	<munit.version>2.2.1</munit.version>
     </properties>
+    <!-- yoooooo -->
 	<!-- <profiles>
 	<profile>
 		<id>DEV</id>
